--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,7 +10,9 @@
   <body class="bg-[#D9D9D9]">
     <!-- Header Section Start -->
     <header class="absolute top-0 left-0 w-full">
-      <div class="flex justify-around items-center py-6 md:px-10">
+      <div
+        class="flex justify-between lg:justify-around items-center py-3 md:px-10"
+      >
         <div class="flex items-center">
           <a href="#home" class="pt-1 ml-[22px]"
             ><img src="images/Logo.svg" alt=""
@@ -19,7 +21,7 @@
         </div>
         <nav
           id="nav-menu"
-          class="absolute bg-white right-4 top-20 px-8 py-3 rounded-xl shadow-lg hidden z-20 md:static md:shadow-none md:p-0 md:right-0 md:top-0 md:block md:bg-transparent"
+          class="absolute bg-white right-4 top-20 px-10 py-6 rounded-xl shadow-lg hidden z-20 lg:static lg:shadow-none lg:p-0 lg:right-0 lg:top-0 lg:block lg:bg-transparent"
         >
           <ul class="md:flex">
             <li class="list">
@@ -36,9 +38,21 @@
         </nav>
         <div class="flex items-center">
           <a href="#" class="mr-6 font-[500]">Log in</a>
-          <a href="#" class="px-[24px] py-[14px] sign-up rounded-md text-white"
+          <a
+            href="#"
+            class="px-[24px] mr-16 lg:mr-0 py-[14px] sign-up rounded-md text-white"
             >Sign Up</a
           >
+          <button
+            id="hamburger"
+            name="hamburger"
+            type="button"
+            class="block absolute right-4 md:right-12 lg:hidden"
+          >
+            <span class="hamburger-line origin-top-left"></span>
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line origin-bottom-left"></span>
+          </button>
         </div>
       </div>
     </header>
@@ -47,8 +61,8 @@
     <!-- Home Section Start -->
     <section class="pt-24" id="home">
       <div class="container">
-        <div class="flex flex-wrap home py-16 px-10 text-white">
-          <div class="w-full self-center px-6 lg:w-1/2">
+        <div class="flex flex-wrap home py-16 px-10 text-white shadow-xl">
+          <div class="w-full mb-10 lg:mb-0 self-center px-6 lg:w-1/2">
             <h1 class="text-4xl font-bold">
               Dapatkan Pengalaman Belajar Yang Berkesan
             </h1>
@@ -59,7 +73,7 @@
             </p>
             <a
               href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-              class="bg-white rounded-md px-8 py-4 text-black text-sm"
+              class="bg-white rounded-md px-8 py-4 text-black text-sm shadow-xl"
               target="_blank"
               >Mainkan Sekarang</a
             >
@@ -74,93 +88,162 @@
     </section>
     <!-- Home Section End -->
 
-    <section
-      class="py-52 bg-[#333333] absolute w-[100%] top-[450px] z-[-99] rounded-t-[25px]"
+    <main
+      class="pt-52 pb-16 bg-[#333333] absolute w-[100%] top-[800px] z-[-99] lg:top-[450px] rounded-t-[25px]"
     >
       <!-- Fitur Section Start -->
-      <div class="container" id="fitur">
-        <div class="kualitas">
-          <h3 class="text-[#E21C34] text-center text-lg">Fitur</h3>
-          <h1 class="text-center text-2xl text-white font-semibold">
-            Kenapa Kita Lebih Bagus
-            <span class="block">Daripada yang lain</span>
+      <section id="fitur">
+        <div class="container">
+          <div class="kualitas reveal fade-right">
+            <h3 class="text-[#E21C34] text-center text-lg">Fitur</h3>
+            <h1 class="text-center text-2xl text-white font-semibold">
+              Kenapa Kita Lebih Bagus
+              <span class="block">Daripada yang lain</span>
+            </h1>
+            <div class="flex flex-wrap py-16 px-10 text-white">
+              <div class="w-full self-center px-6 lg:w-1/2">
+                <h1 class="text-2xl font-bold">Kualitas Permainan</h1>
+                <p class="my-5 text-[16px]">
+                  TelMe memiliki kualitas yang baik dan grafis yang menarik
+                  serta memukau, suara yang jelas dan terdengar nyata, dan
+                  mekanik permainan yang enak dan memuaskan.
+                </p>
+                <p class="my-5 text-[16px]">
+                  Grafis yang indah dan memukau akan membantu mempertahankan
+                  perhatian pemain. Suara yang jelas akan membantu memperkuat
+                  pengalaman mereka. Mekanik yang enak akan membuat pemain
+                  merasa senang dan tertarik untuk terus bermain serta
+                  meningkatkan kemampuan mereka
+                </p>
+              </div>
+              <div
+                class="w-full self-end mt-6 px-5 relative lg:right-0 lg:mt-0 lg:w-1/2"
+              >
+                <img src="images/kualitas.svg" alt="profile" />
+              </div>
+            </div>
+          </div>
+          <div class="interaktivitas reveal fade-bottom">
+            <div class="flex flex-wrap py-16 px-10 text-white">
+              <div
+                class="w-full mb-6 self-end mt-6 px-5 relative lg:right-0 lg:mt-0 lg:w-1/2"
+              >
+                <img src="images/interaktivitas.svg" alt="profile" />
+              </div>
+              <div class="w-full self-center px-6 lg:w-1/2">
+                <h1 class="text-2xl font-bold">Interaktivitas</h1>
+                <p class="my-5 text-[16px]">
+                  TelMe memiliki tingkat interaktivitas yang baik sehingga
+                  membuat pemain lebih tertarik dan merasa lebih terlibat untuk
+                  terus bermain. Ini juga membantu mempertahankan perhatian
+                  mereka dan membuat mereka merasa seperti mereka memiliki
+                  kendali atas permainan.
+                </p>
+                <p class="my-5 text-[16px]">
+                  TelMe juga mempunyai tugas yang menantang sehingga pemain
+                  merasa lebih puas / senang ketika menyelesaikan nya. Dan TelMe
+                  juga memiliki alat-alat interaktif lainnya yang membuat pemain
+                  merasa seperti mereka berpartisipasi dalam permainan
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="efektivitas reveal fade-left">
+            <div class="flex flex-wrap py-16 px-10 text-white">
+              <div class="w-full self-center px-6 lg:w-1/2">
+                <h1 class="text-2xl font-bold">Efektivitas</h1>
+                <p class="my-5 text-[16px]">
+                  TelMe sangat efektif dalam membantu pembelajran. TelMe dapat
+                  membantu mempermudah pemahaman konsep yang sulit dengan
+                  mempresentasikan materi dalam bentuk visual dan interaktif.
+                  Ini membantu pemain meningkatkan keterampilan pemain, seperti
+                  problem solving, kreativitas, kolaborasi, dan memori jangka
+                  panjang.
+                </p>
+                <p class="my-5 text-[16px]">
+                  TelMe juga membantu meningkatkan motivasi dan minat pemain
+                  dalam belajar membuat pembelajaran menjadi lebih efektif dan
+                  menyenangkan, dengan ini pemain tidak akan cepat kehilangan
+                  minat karena TelMe mengatasi masalah belajar seperti
+                  kebosanan.
+                </p>
+              </div>
+              <div
+                class="w-full self-end mt-6 px-5 relative lg:right-0 lg:mt-0 lg:w-1/2"
+              >
+                <img src="images/efektivitas.svg" alt="profile" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Fitur Section End -->
+
+      <div class="container mt-16 reveal fade-bottom">
+        <div
+          class="flex flex-col items-center justify-center py-12 px-14 text-white gradien"
+        >
+          <h1 class="text-3xl mb-10 lg:text-[40px] lg:mb-6 text-center">
+            Ayo mulai pertualangan belajar anda bersama TelMe sekarang!
           </h1>
-          <div class="flex flex-wrap py-16 px-10 text-white">
-            <div class="w-full self-center px-6 lg:w-1/2">
-              <h1 class="text-2xl font-bold">Kualitas Permainan</h1>
-              <p class="my-5 text-[16px]">
-                TelMe memiliki kualitas yang baik dan grafis yang menarik serta
-                memukau, suara yang jelas dan terdengar nyata, dan mekanik
-                permainan yang enak dan memuaskan.
-              </p>
-              <p class="my-5 text-[16px]">
-                Grafis yang indah dan memukau akan membantu mempertahankan
-                perhatian pemain. Suara yang jelas akan membantu memperkuat
-                pengalaman mereka. Mekanik yang enak akan membuat pemain merasa
-                senang dan tertarik untuk terus bermain serta meningkatkan
-                kemampuan mereka
-              </p>
-            </div>
-            <div
-              class="w-full self-end mt-6 px-5 relative lg:right-0 lg:mt-0 lg:w-1/2"
-            >
-              <img src="images/kualitas.svg" alt="profile" />
-            </div>
-          </div>
-        </div>
-        <div class="interaktivitas">
-          <div class="flex flex-wrap py-16 px-10 text-white">
-            <div
-              class="w-full self-end mt-6 px-5 relative lg:right-0 lg:mt-0 lg:w-1/2"
-            >
-              <img src="images/interaktivitas.svg" alt="profile" />
-            </div>
-            <div class="w-full self-center px-6 lg:w-1/2">
-              <h1 class="text-2xl font-bold">Interaktivitas</h1>
-              <p class="my-5 text-[16px]">
-                TelMe memiliki tingkat interaktivitas yang baik sehingga membuat
-                pemain lebih tertarik dan merasa lebih terlibat untuk terus
-                bermain. Ini juga membantu mempertahankan perhatian mereka dan
-                membuat mereka merasa seperti mereka memiliki kendali atas
-                permainan.
-              </p>
-              <p class="my-5 text-[16px]">
-                TelMe juga mempunyai tugas yang menantang sehingga pemain merasa
-                lebih puas / senang ketika menyelesaikan nya. Dan TelMe juga
-                memiliki alat-alat interaktif lainnya yang membuat pemain merasa
-                seperti mereka berpartisipasi dalam permainan
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="efektivitas">
-          <div class="flex flex-wrap py-16 px-10 text-white">
-            <div class="w-full self-center px-6 lg:w-1/2">
-              <h1 class="text-2xl font-bold">Efektivitas</h1>
-              <p class="my-5 text-[16px]">
-                TelMe sangat efektif dalam membantu pembelajran. TelMe dapat
-                membantu mempermudah pemahaman konsep yang sulit dengan
-                mempresentasikan materi dalam bentuk visual dan interaktif. Ini
-                membantu pemain meningkatkan keterampilan pemain, seperti
-                problem solving, kreativitas, kolaborasi, dan memori jangka
-                panjang.
-              </p>
-              <p class="my-5 text-[16px]">
-                TelMe juga membantu meningkatkan motivasi dan minat pemain dalam
-                belajar membuat pembelajaran menjadi lebih efektif dan
-                menyenangkan, dengan ini pemain tidak akan cepat kehilangan
-                minat karena TelMe mengatasi masalah belajar seperti kebosanan.
-              </p>
-            </div>
-            <div
-              class="w-full self-end mt-6 px-5 relative lg:right-0 lg:mt-0 lg:w-1/2"
-            >
-              <img src="images/efektivitas.svg" alt="profile" />
-            </div>
-          </div>
+          <a
+            href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+            class="bg-white rounded-md px-10 py-4 text-black text-sm"
+            target="_blank"
+            >Let's Start</a
+          >
         </div>
       </div>
-      <!-- Fitur Section End -->
-    </section>
+
+      <!-- Footer Section Start -->
+      <footer>
+        <div class="container reveal fade-bottom">
+          <div class="flex justify-between mt-16 footer px-6 lg:px-0">
+            <nav id="nav-menu" class="text-white">
+              <ul class="md:flex">
+                <li class="list">
+                  <a href="#home" class="lg:ml-1">Platform</a>
+                </li>
+                <li class="list">
+                  <a href="#fitur">Fitur</a>
+                </li>
+                <li class="list">
+                  <a href="#about">About</a>
+                </li>
+                <li><a href="#contacts">Contacts</a></li>
+              </ul>
+            </nav>
+            <nav>
+              <ul class="md:flex items-center">
+                <li class="mb-2 lg:mb-0 mr-6">
+                  <a href="#"><img src="images/Vector.svg" alt="" /></a>
+                </li>
+                <li class="mb-2 lg:mb-0 mr-6">
+                  <a href="#"><img src="images/discord-mono.svg" alt="" /></a>
+                </li>
+                <li class="mb-2 lg:mb-0 mr-6">
+                  <a href="#"><img src="images/instagram-mono.svg" alt="" /></a>
+                </li>
+                <li class="mb-2 lg:mb-0">
+                  <a href="#"><img src="images/github-mono.svg" alt="" /></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="flex justify-between mt-10 text-white px-6 lg:px-0">
+            <div class="flex items-center">
+              <a href="#home" class="pt-1"
+                ><img src="images/Logo.svg" alt=""
+              /></a>
+              <h1 class="text-2xl font-[500]">TelMe</h1>
+            </div>
+            <h1 class="flex items-center">© 2023 TelMe. All right reserved</h1>
+          </div>
+        </div>
+      </footer>
+      <!-- Footer Section Start End -->
+    </main>
+
+    <script src="dist/script.js"></script>
   </body>
 </html>
