--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             <li class="list">
               <a href="#fitur">Fitur</a>
             </li>
-            <li class="list">
-              <a href="#about">About</a>
-            </li>
-            <li><a href="#contacts">Contacts</a></li>
+            
+            <li><a href="contacts.html">Contacts</a></li>
           </ul>
         </nav>
         <div class="flex items-center">
@@ -206,9 +204,6 @@
                 </li>
                 <li class="list">
                   <a href="#fitur">Fitur</a>
-                </li>
-                <li class="list">
-                  <a href="#about">About</a>
                 </li>
                 <li><a href="#contacts">Contacts</a></li>
               </ul>
